# get-license-helper

./: CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
