[package]
name = "get-license-helper"
version = "0.1.1"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/cds-astro/get-license-helper"
description = """
Help in automatically downloading dependencies license files (using the cargo-license json output).
Motivation: help in building conda-forge recipes.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.3", features = ["blocking"] }
structopt = "0.3"
